--- a/html/resume.html
+++ b/html/resume.html
@@ -17,7 +17,7 @@
         </span>
         <section id="content">
             <div class="plaintext">
-                <h1 class="title">Resume</h1>
+                <h1 class="title">Resume & CV</h1>
             </div>
             <div class="resume item">
                 <section class="item-block acrylic parent shadow">
