24w19a: Fix Sorting Algorithm, show sorting button, and hide 7 items.

--- a/html/projects.html
+++ b/html/projects.html
@@ -37,7 +37,9 @@
                         <option value="date-asc">Date (Ascending)</option>
                         <option value="date-des">Date (Descending)</option>
                     </select>
+                    
                 </span>
+                <p class="center" id="hidden-items-notice-project"></p>
             </div>
             <script>
                 async function load(){
