--- a/html/index.html
+++ b/html/index.html
@@ -41,7 +41,7 @@
                     <button onclick='window.location.href = "resume.html";'>Resume and CV</button>
                     <div class="plaintext dark">
                         <p>* Excluding blank, forked, and several unwanted repos. Only 16 out of 44 repositories are actual projects and 13 out of 44 repositories are public.</p>
-                        <p>** Includes a major project from school (ComParts Website). Does not include years of self-studying, lecture and laboratory experience from schools.</p>
+                        <p>** Does not include years of self-studying, lecture and laboratory experience from schools.</p>
                         <p>*** Started studying on mid-2018.</p>
                     </div>
                     <br>
