--- a/html/about.html
+++ b/html/about.html
@@ -2,9 +2,10 @@
 <html lang="en">
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
-        <title>Charles Martin's Portfolio</title>
-        <link rel="stylesheet" type="text/css" href="../css/item.css">
-        <link rel="stylesheet" type="text/css" href="../css/style.css">
+        <title>About Charles Martin</title>
+        <link rel="stylesheet" href="../css/items.css" type="text/css"/>
+        <link rel="stylesheet" href="../css/style.css" type="text/css"/>
+        <link rel="stylesheet" href="../css/elements.css" type="text/css"/>
         <script src="../js/script.js"></script>
     </head>
     <body>
@@ -17,23 +18,29 @@
         </span>
         <section id="content">
             <div class="plaintext">
-                <div class="plaintext">
-                    <h1 class="title">About</h1>
-                </div>
-                <ul>
-                    <li><p>Started learning to code at mid-2018 (C++) and started making a software on early 2020 as a hobby.</p></li>
-                    <ul>
-                        <li><p>A total of 6 years of learning experience.</p></li>
-                    </ul>
-                    <li><p>Country: Philippines</p></li>
-                </ul>
-                <h2>About this website</h2>
-                <ul>
-                    <li><p>Built on Jekyll and runs on GitHub.</p></li>
-                    <li><p>This website was first built on mid-2023 and publicly available on 2024.</p></li>
-                </ul>
+                <h1 class="title">About</h1>
             </div>
-            
+            <div class="item">
+                <section class="item-block acrylic parent shadow">
+                    <h3 class="title">About Me</h3>
+                    <ul>
+                        <li><p>Started learning to code at mid-2018 (C++) and started making a software on early 2020 as a hobby.</p></li>
+                        <ul>
+                            <li><p>A total of 6 years of learning experience.</p></li>
+                        </ul>
+                        <li><p>Country: Philippines</p></li>
+                    </ul>
+                </section>
+            </div>
+            <div class="item">
+                <section class="item-block acrylic parent shadow">
+                    <h3 class="title">About this website</h3>
+                    <ul>
+                        <li><p>Built on Jekyll and runs on GitHub.</p></li>
+                        <li><p>This website was first built on mid-2023 and publicly available on 2024.</p></li>
+                    </ul>
+                </section>
+            </div>
         </section>
         <section id="footer">
 
