--- a/html/about.html
+++ b/html/about.html
@@ -35,6 +35,7 @@
             <div class="item">
                 <section class="item-block acrylic parent shadow">
                     <h3 class="title">About this website</h3>
+                    <p class="category">Website - Static</p>
                     <ul>
                         <li><p>Built on Jekyll and runs on GitHub.</p></li>
                         <li><p>This website was first built on mid-2023 and publicly available on 2024.</p></li>
