--- a/html/about.html
+++ b/html/about.html
@@ -26,7 +26,7 @@
                     <ul>
                         <li><p>Started learning to code at mid-2018 (C++) and started making a software on early 2020 as a hobby.</p></li>
                         <ul>
-                            <li><p>A total of 6 years of learning experience.</p></li>
+                            <li><p>A total of 5 years of learning experience.</p></li>
                         </ul>
                         <li><p>Country: Philippines</p></li>
                     </ul>
@@ -37,7 +37,7 @@
                     <h3 class="title">About this website</h3>
                     <p class="category">Website - Static</p>
                     <ul>
-                        <li><p>Built on Jekyll and runs on GitHub.</p></li>
+                        <li><p>Built on Jekyll and it is hosted on GitHub.</p></li>
                         <li><p>This website was first built on mid-2023 and publicly available on 2024.</p></li>
                     </ul>
                 </section>
