--- a/html/index.html
+++ b/html/index.html
@@ -40,8 +40,8 @@
                     <button onclick='window.location.href = "projects.html";'>My Projects</button>
                     <button onclick='window.location.href = "resume.html";'>Resume and CV</button>
                     <div class="plaintext dark">
-                        <p>* Excluding blank, forked, and several unwanted repos. Only 21 out of 47 repositories are actual projects and 13 out of 47 repositories are public.</p>
-                        <p>** Does not include years of self-studying, lecture and laboratory experience from schools.</p>
+                        <p>* Excluding blank, forked, and several unwanted repos. Only 21 out of 47 repositories are actual projects and 14 out of 47 repositories are public.</p>
+                        <p>** Only counts hands-on working experience. Does not include years of self-studying, <a href="projects.html">self-projects</a>, lecture and laboratory experience from schools.</p>
                         <p>*** Started studying on mid-2018.</p>
                     </div>
                     <br>
