24w30a: Rename "Relevance" into "Priority" and update content.

--- a/html/projects.html
+++ b/html/projects.html
@@ -33,7 +33,7 @@
                 <span class="listbox">
                     <!-- <label for="projects-sort">Sort by</label> -->
                     <select name="Sort By" id="projects-sort" onchange='load()'>
-                        <option value="relevance">Relevance</option>
+                        <option value="priority">Priority</option>
                         <option value="date-asc">Date (Ascending)</option>
                         <option value="date-des">Date (Descending)</option>
                     </select>
