--- a/html/index.html
+++ b/html/index.html
@@ -30,8 +30,8 @@
                         <br>
                         <h1 class="title">Charles Martin</h1>
                         <h2 class="subtitle">Software Developer - Specialized on Native Applications</h2>
-                        <p>An object-oriented computer science student who aspires to become a software developer,
-                            especially on native applications with C++, C#, or Java.
+                        <p>A computer science student aspiring to become a software developer who
+                            wanted to build native applications and frameworks with C++, C#, or Java.
                         </p>
                     </div>
                     <span class="tiles" id="summary-contents">
@@ -40,8 +40,8 @@
                     <button onclick='window.location.href = "projects.html";'>My Projects</button>
                     <button onclick='window.location.href = "resume.html";'>Resume and CV</button>
                     <div class="plaintext dark">
-                        <p>* Excluding blank, forked, and several unwanted repos. Only 21 out of 47 repositories are actual projects and 14 out of 47 repositories are public.</p>
-                        <p>** Only counts hands-on working experience. Does not include years of self-studying, <a href="projects.html">self-projects</a>, lecture and laboratory experience from schools.</p>
+                        <p>* Hands-on software development experience. Counts both hobby and work experience.</p>
+                        <p>** 7 out of 49 repositories are public.</p>
                         <p>*** Started studying on mid-2018.</p>
                     </div>
                     <br>
