--- a/html/about.html
+++ b/html/about.html
@@ -29,6 +29,8 @@
                             <li><p>A total of 5 years of learning experience.</p></li>
                         </ul>
                         <li><p>Country: Philippines</p></li>
+                        <li><p><a href="mailto:charlesmartinpascual@gmail.com">Email</a></p></li>
+                        <li><p><a href="tel:09458628542">Dial</a></p></li>
                     </ul>
                 </section>
             </div>
