--- a/html/skills.html
+++ b/html/skills.html
@@ -48,7 +48,7 @@
                     <h3 class="title">Software Development</h3>
                 </section>
                 <section class="item-block acrylic parent shadow">
-                    <h3 class="title">Necessary IT Skills</h3>
+                    <h3 class="title">Other IT Skills</h3>
                 </section>
             </div>
         </section>
