--- a/html/index.html
+++ b/html/index.html
@@ -40,9 +40,9 @@
                     <button onclick='window.location.href = "projects.html";'>My Projects</button>
                     <button onclick='window.location.href = "resume.html";'>Resume and CV</button>
                     <div class="plaintext dark">
-                        <p>* Hands-on software development experience. Counts both hobby and work experience.</p>
-                        <p>** 7 out of 49 repositories are public.</p>
-                        <p>*** Started studying on mid-2018.</p>
+                        <p>* Multiple repositories on GitHub are private.</p>
+                        <p>** Hands-on software development experience. Counts only work experience.</p>
+                        <p>*** Started studying on mid-2018. Counts experience from my hobbies.</p>
                     </div>
                     <br>
                 </section>
