25w01a: Update content to be less boastful.

--- a/html/about.html
+++ b/html/about.html
@@ -24,22 +24,24 @@
                 <section class="item-block acrylic parent shadow">
                     <h3 class="title">About Me</h3>
                     <ul>
-                        <li><p>Started learning to code at mid-2018 (C++) and started making a software on early 2020 as a hobby.</p></li>
+                        <p>Started learning to code at 2018 (C++), then started making a software on early 2020 as a hobby,
+                            and then started pursuing my computer science degree since 2023.</p>
                         <ul>
-                            <li><p>A total of 5 years of learning experience.</p></li>
+                            <li><p>A total of 6 years of learning experience.</p></li>
                         </ul>
-                        <li><p>Country: Philippines</p></li>
-                        <li><p><a href="mailto:charlesmartinpascual@gmail.com">Email</a></p></li>
-                        <li><p><a href="tel:09458628542">Dial</a></p></li>
+                        <p>Country: Philippines</p>
+                        <button onclick="navigate('mailto:charlesmartinpascual@gmail.com')">Email</button>
+                        <button onclick="navigate('tel:09458628542')">Dial</button>
                     </ul>
                 </section>
             </div>
             <div class="item">
                 <section class="item-block acrylic parent shadow">
                     <h3 class="title">About this website</h3>
-                    <p class="category">Website - Static</p>
+                    <p class="category">Static Website</p>
                     <ul>
                         <li><p>Built on Jekyll and it is hosted on GitHub.</p></li>
+                        <li><p>Utilizes HTML, CSS, and JavaScript.</p></li>
                         <li><p>This website was first built on mid-2023 and publicly available on 2024.</p></li>
                     </ul>
                 </section>
