Fix grammatical error on index.html

--- a/html/index.html
+++ b/html/index.html
@@ -41,7 +41,7 @@
                     <button onclick='window.location.href = "resume.html";'>Resume and CV</button>
                     <div class="plaintext dark">
                         <p>* Multiple repositories on GitHub are private.</p>
-                        <p>** Hands-on software development experience. Counts only work experience.</p>
+                        <p>** Hands-on software development experience. Counts only from work experience.</p>
                         <p>*** Started studying on mid-2018. Counts experience from my hobbies.</p>
                     </div>
                     <br>
