--- a/html/footer.html
+++ b/html/footer.html
@@ -11,6 +11,7 @@
 </script>
 <footer onload="loadCopyrightInfo()" id="footer">
     <div class="plaintext dark">
+        <p>Last Updated: June 12, 2025</p>
         <p>Copyright @2025</p>
     </div>
 </footer>
