--- a/html/about.html
+++ b/html/about.html
@@ -30,12 +30,12 @@
                             <li><p>A total of 6 years of learning experience.</p></li>
                         </ul>
                         <p>Country: Philippines</p>
-                        <button onclick="navigate('mailto:charlesmartinpascual@gmail.com')">Email</button>
-                        <button onclick="navigate('tel:09458628542')">Dial</button>
+                        <button onclick="navigate('mailto:charlesmartinpascual@gmail.com')" disabled>Email</button>
+                        <button onclick="navigate('tel:09458628542')" disabled>Dial</button>
                     </ul>
                 </section>
             </div>
-            <div class="item">
+            <!-- <div class="item">
                 <section class="item-block acrylic parent shadow">
                     <h3 class="title">About this website</h3>
                     <p class="category">Static Website</p>
@@ -45,7 +45,7 @@
                         <li><p>This website was first built on mid-2023 and publicly available on 2024.</p></li>
                     </ul>
                 </section>
-            </div>
+            </div> -->
         </section>
         <section id="footer">
 
