--- a/html/index.html
+++ b/html/index.html
@@ -29,7 +29,7 @@
                     <div class="plaintext dark">
                         <br>
                         <h1 class="title">Charles Martin</h1>
-                        <h2 class="subtitle">Software Developer - Specialized on Native Applications</h2>
+                        <h2 class="subtitle"><del>Software Developer - Specialized on Native Applications</del> - Not Job Ready</h2>
                         <p>A computer science student aspiring to become a software developer who
                             wanted to build native applications and frameworks with C++, C#, or Java.
                         </p>
@@ -37,8 +37,9 @@
                     <span class="tiles" id="summary-contents">
                         
                     </span>
-                    <button onclick='window.location.href = "projects.html";'>My Projects</button>
-                    <button onclick='window.location.href = "resume.html";'>Resume and CV</button>
+                    <button onclick='window.location.href = "projects.html";' disabled>My Projects</button>
+                    <button onclick='window.location.href = "resume.html";' disabled>Resume and CV</button>
+                    <button onclick='' disabled>Inquire</button>
                     <div class="plaintext dark">
                         <p>* Multiple repositories on GitHub are private.</p>
                         <p>** Hands-on software development experience. Counts only from work experience.</p>
