--- a/html/projects.html
+++ b/html/projects.html
@@ -41,14 +41,16 @@
                 </span>
                 <p class="center" id="hidden-items-notice-project"></p>
             </div>
-            <script>
+            
+            <!-- <script>
                 async function load(){
                     let values = await updateListBoxAndSort("projects-sort", "../json/projects.json");
                     loadItems("project", "../json/projects.json", values);
                 }
 
                 load();
-            </script>
+            </script> -->
+
             <!-- <h2>Self-Projects (Hobbies)</h2> -->
             <div id="projects">
                 <!-- <div class="project item" id="project-1">
@@ -60,6 +62,17 @@
                         </ul>
                     </section>
                 </div> -->
+
+                <div class="project item" id="project-1">
+                    <img class="item-image" id="item-image-1" src="../res/img/Coding Clipart.png">
+                    <section class="item-content acrylic parent shadow">
+                        <h3 class="title">NOT JOB READY</h3>
+                        <p class="date"></p>
+                        <ul class="description-list">
+                            <li><p>I am currently an undergraduate Computer Science student. To protect my privacy and reputation, all projects has been hidden until a reputable software has been built.</p></li>
+                        </ul>
+                    </section>
+                </div>
             </div>
         </section>
         <section id="footer">
