--- a/html/resume.html
+++ b/html/resume.html
@@ -22,19 +22,19 @@
             <div class="resume item">
                 <section class="item-block acrylic parent shadow">
                     <h3 class="title">Resume</h3>
-                    <p>In order to protect my privacy, the request must be done through email.</p>
+                    <!-- <p>In order to protect my privacy, the request must be done through email.</p> -->
                     <p>Please use the resume in accordance to DATA PRIVACY ACT OF 2012 or the REPUBLIC ACT OF 10173. AN ACT PROTECTING INDIVIDUAL PERSONAL INFORMATION IN INFORMATION AND COMMUNICATIONS SYSTEMS IN THE GOVERNMENT AND THE PRIVATE SECTOR, CREATING FOR THIS PURPOSE A NATIONAL PRIVACY COMMISSION, AND FOR OTHER PURPOSES</p>
-                    <button onclick='window.location.href= "mailto:charlesmartinpascual@gmail.com";'>Send a request (email)</button>
-                    <button onclick='window.location.href = "https://privacy.gov.ph/data-privacy-act/";'>Learn more about R.A. 10173</button>
+                    <button onclick='window.location.href= "mailto:charlesmartinpascual@gmail.com";' disabled>Send a request (email)</button>
+                    <button onclick='window.location.href = "https://privacy.gov.ph/data-privacy-act/";' disabled>Learn more about R.A. 10173</button>
                 </section>
             </div>
             <div class="resume item">
                 <section class="item-block acrylic parent shadow">
                     <h3 class="title">Curriculum Vitae</h3>
-                    <p>In order to protect my privacy, the request must be done through email.</p>
+                    <!-- <p>In order to protect my privacy, the request must be done through email.</p> -->
                     <p>Please use the curriculum vitae in accordance to DATA PRIVACY ACT OF 2012 or the REPUBLIC ACT OF 10173. AN ACT PROTECTING INDIVIDUAL PERSONAL INFORMATION IN INFORMATION AND COMMUNICATIONS SYSTEMS IN THE GOVERNMENT AND THE PRIVATE SECTOR, CREATING FOR THIS PURPOSE A NATIONAL PRIVACY COMMISSION, AND FOR OTHER PURPOSES</p>
                     <button onclick='window.location.href= "mailto:charlesmartinpascual@gmail.com";' disabled>Send a request (email)</button>
-                    <button onclick='window.location.href = "https://privacy.gov.ph/data-privacy-act/";'>Learn more about R.A. 10173</button>
+                    <button onclick='window.location.href = "https://privacy.gov.ph/data-privacy-act/";' disabled>Learn more about R.A. 10173</button>
                 </section>
             </div>
         </section>
