Fix grammar issues

--- a/html/projects.html
+++ b/html/projects.html
@@ -69,7 +69,7 @@
                         <h3 class="title">NOT JOB READY</h3>
                         <p class="date"></p>
                         <ul class="description-list">
-                            <li><p>I am currently an undergraduate Computer Science student. To protect my privacy and reputation, all projects has been hidden until a reputable software has been built.</p></li>
+                            <li><p>I am currently an undergraduate computer Science student. To protect my privacy and reputation, all projects has been hidden unless a reputable software has been built.</p></li>
                         </ul>
                     </section>
                 </div>
